# QTrader

./: CHANGELOG.md  README.md  makefile  pyproject.toml
docs/cli/: interactive.md  interactive_debugging.md
src/qtrader/cli/commands/: backtest.py  data.py
src/qtrader/cli/ui/: breakpoints.py  interactive.py
src/qtrader/engine/: config.py  engine.py  experiment.py
src/qtrader/events/: event_store.py
src/qtrader/scaffold/: QTRADER_README.md
src/qtrader/services/data/: service.py
src/qtrader/services/manager/: service.py
src/qtrader/services/portfolio/: service.py
src/qtrader/services/reporting/: __init__.py  config.py  html_reporter.py  service.py  writers.py
src/qtrader/system/: config.py
src/qtrader/utilities/: yahoo_update.py
tests/integration/: conftest.py  test_reporting_integration.py
tests/unit/cli/ui/: test_breakpoints.py  test_interactive.py
tests/unit/engine/: test_engine.py
tests/unit/services/reports/: test_writers.py
tests/unit/utilities/: test_yahoo_update.py
